recursion.lessons.recursion.koch.Koch.scala.error
Koch:23: error: Unit does not take parameters
		Motif()}
                     ^Koch:24: error: not found: value lenght
	else {snowSide(levels-1, lenght/(3*levels))}
                                 ^