recursion.lessons.recursion.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
    snowSide(levels, length);
    right(120);
    setColor(Color.blue);
    snowSide(levels, length);
    right(120);
    setColor(Color.orange);
    snowSide(levels, length);
    right(120);
}
def snowSide(levels:Int, length:Double) {
	def Motif {
	avance(length)
	left(60)
	avance(length)
	right(120)
	avance(length)
	left(60)
	avance(length)
	}
	if (levels==0) {
		Motif()}
	else {snowSide(levels-1, lenght/(3*levels))}
	}
	
	
